# lang_detectors_compare

./: .gitignore  Cargo.toml  README.md
accuracy/: langram.csv  lingua_vs_langram.csv  whatlang_vs_langram.csv  whichlang_vs_langram.csv
accuracy/alphabet_detector/: AcehneseJawi.txt  Afrikaans.txt  AkanTwi.txt  ArabicMoroccan.txt  Armenian.txt  AymaraCentral.txt  AzerbaijaniNorth.txt  AzerbaijaniSouth.txt  Bambara.txt  BanjarJawi.txt  Bashkir.txt  Belarusian.txt  Catalan.txt  ChineseCantoneseTraditional.txt  ChineseMandarinSimplified.txt  ChineseSimplified.txt  Czech.txt  DinkaSouthwestern.txt  Dutch.txt  Dyula.txt  Esperanto.txt  Estonian.txt  Ewe.txt  Faroese.txt  Fon.txt  French.txt  FulfuldeNigerian.txt  Ganda.txt  Georgian.txt  German.txt  Greek.txt  Guarani.txt  GuaraniParaguayan.txt  Gujarati.txt  Hausa.txt  Hungarian.txt  Icelandic.txt  Igbo.txt  Japanese.txt  Kabiye.txt  (+66 more)
accuracy/lingua/: Afrikaans.txt  AlbanianTosk.txt  Arabic.txt  Armenian.txt  AzerbaijaniNorth.txt  Basque.txt  Belarusian.txt  Bengali.txt  Bosnian.txt  Bulgarian.txt  Catalan.txt  ChineseMandarinSimplified.txt  ChineseSimplified.txt  Croatian.txt  Czech.txt  Danish.txt  (+61 more)
src/: detector_statistics.rs  main.rs  statistic.rs
texts/: aceArab  aceLatn  acmArab  acqArab  aebArab  afrLatn  ajpArab  alsLatn  amhEthi  apcArab  arbArab  arsArab  aryArab  arzArab  asmBeng  astLatn  awaDeva  ayrLatn  azbArab  azjLatn  bakCyrl  bamLatn  banLatn  belCyrl  bemLatn  benBeng  bhoDeva  bjnArab  bjnLatn  bodTibt  bosLatn  bugLatn  bulCyrl  catLatn  cebLatn  cesLatn  cjkLatn  ckbArab  cmnHans  crhLatn  (+161 more)
(+502 files in other folders)
